# geospoof

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  CNAME  CONTRIBUTING.md  LICENSE  PRIVACY_POLICY.md  README.md  USER_GUIDE.md  eslint.config.js  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  update.json  vite.config.ts  vitest.config.ts  web-ext-config.mjs  webpack.config.js
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  gps-ci.yml  gps-supply-chain.yml  release-gps-macos-dmg.yml  release-ios-appstore.yml  release-macos-appstore.yml  release-macos-dmg.yml  release.yml  stale.yml
_locales/: README.md
_locales/de/: messages.json
_locales/en/: messages.json
_locales/es/: messages.json
_locales/fr/: messages.json
_locales/id/: messages.json
_locales/ja/: messages.json
_locales/nl/: messages.json
_locales/pt_BR/: messages.json
_locales/ru/: messages.json
_locales/sv/: messages.json
_locales/vi/: messages.json
_locales/zh_CN/: messages.json
assets/: popup.css  popup.html
assets/store-listings/: listing-copy.md
background/: background.js
cdk/: .env.example  .gitignore  .prettierignore  README.md  cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
cdk/lib/: app.ts
cdk/test/: cdk.test.ts
content/: content.js  content.test.helper.js  injected.js
docs/: API.md  BACKGROUND.md  SITE_FILTERS.md  TIMEZONE_GEO_DATA.md  USER_GUIDE.md  VPN_SYNC.md
gps/: Cargo.toml  DEPENDENCY_POLICY.md  LICENSE  README.md  deny.toml
gps/.cargo/: audit.toml
gps/agent/: Cargo.toml
gps/agent/src/: contract.rs  discovery.rs  entitlement.rs  keepawake.rs  main.rs  reconcile.rs  service.rs
gps/core/: Cargo.toml
gps/core/examples/: verify_device.rs
gps/core/src/: controller.rs  ddi.rs  error.rs  hold.rs  idevice_controller.rs  lib.rs  mock.rs  session.rs  state_machine.rs  types.rs
gps/desktop/: Package.swift
gps/desktop/.swiftpm/xcode/package.xcworkspace/xcuserdata/anthony.xcuserdatad/: UserInterfaceState.xcuserstate
gps/desktop/.swiftpm/xcode/xcuserdata/anthony.xcuserdatad/xcschemes/: xcschememanagement.plist
gps/desktop/Sources/GeoSpoofGPSMenu/: AgentControl.swift  AgentSupervisor.swift  AppDelegate.swift  GpsStatus.swift  SetupWindow.swift  main.swift
gps/ffi/: Cargo.toml  FFI_CONTRACT.md  build.rs  cbindgen.toml
gps/ffi/src/: lib.rs
gps/ffi/tests/: abi.rs
gps/packaging/: Info.plist.in  build-dmg.sh  entitlements.plist
gps/scripts/: release.sh
icons/: README.md
popup/: popup.css  popup.html  popup.js
release-assets/: geospoof-1.17.10-signed.xpi  geospoof-1.17.10.xpi  geospoof-1.17.11-signed.xpi  geospoof-1.17.11.xpi  geospoof-1.17.12-signed.xpi  geospoof-1.17.12.xpi  geospoof-1.17.13-signed.xpi  geospoof-1.17.13.xpi  geospoof-1.17.15-signed.xpi  geospoof-1.17.15.xpi  geospoof-1.17.16-signed.xpi  geospoof-1.17.16.xpi  geospoof-1.18.0-signed.xpi  geospoof-1.18.0.xpi  geospoof-1.18.2-signed.xpi  geospoof-1.18.2.xpi  geospoof-1.18.3-signed.xpi  geospoof-1.18.3.xpi  geospoof-1.18.4-signed.xpi  geospoof-1.18.4.xpi  geospoof-1.19.0-signed.xpi  geospoof-1.19.0.xpi  geospoof-1.19.1-signed.xpi  geospoof-1.19.1.xpi  geospoof-1.19.2-signed.xpi  geospoof-1.19.2.xpi  geospoof-1.19.3-signed.xpi  geospoof-1.19.3.xpi  geospoof-1.19.4-signed.xpi  geospoof-1.19.4.xpi  geospoof-1.19.5-signed.xpi  geospoof-1.19.5.xpi  geospoof-1.19.6-signed.xpi  geospoof-1.19.6.xpi  geospoof-1.19.7-signed.xpi  geospoof-1.19.7.xpi  geospoof-firefox-v1.19.10-signed.xpi  geospoof-firefox-v1.19.10-unsigned.xpi  geospoof-firefox-v1.19.8-signed.xpi  geospoof-firefox-v1.19.8-unsigned.xpi  (+78 more)
safari/: .gitignore  GeoSpoof (iOS)Release.entitlements  GeoSpoof (macOS)Release.entitlements  GeoSpoof WidgetExtensionRelease.entitlements  GeoSpoof.storekit
safari/GeoSpoof Widget/: ResyncIntent.swift  SpoofControl.swift  SpoofSnapshot.swift  SpoofWidget.swift
safari/GeoSpoof.xcodeproj/: project.pbxproj
safari/GeoSpoofTests/: CoordinateParserParityTests.swift  PatternParserParityTests.swift
safari/Shared (App)/: Coordinates.swift  ProPaywallView.swift  ProStore.swift  SpoofControlPanel.swift  SpoofDetailsView.swift  SpoofModel.swift  TimezoneShape.swift  ViewController.swift
safari/Shared (Extension)/: SafariWebExtensionHandler.swift
safari/fastlane/: Appfile  Fastfile  README.md
safari/iOS (App)/: AppDelegate.swift  Info.plist  SceneDelegate.swift
safari/iOS (Extension)/: Info.plist
safari/macOS (App)/: AppDelegate.swift  Info.plist
safari/scripts/: build-cities.mjs
scripts/: generate-update-manifest.sh  package-xpi.sh  release-helpers.ts  sign-xpi.sh  sync-xcode-version.mjs
site/: .gitattributes  .gitignore  .prettierignore  README.md  components.json  content-collections.ts  eslint.config.js  package-lock.json  package.json  support.html  vercel.json  vite.config.ts
site/public/: llms.txt  manifest.json  robots.txt
site/scripts/: copy-geo-tz-data.mjs  generate-sitemap.mjs  ping-indexnow.mjs
site/src/: routeTree.gen.ts  styles.css  types.d.ts
src/background/: activity-watcher.ts  app-bridge.ts  badge.ts  bootstrap-register.ts  debugger-spoof.ts  endpoint-cooldown.ts  geocoding.ts  index.ts  log-relay.ts  messages.ts  proxy-watcher.ts  resync-core.ts  session-cache.ts  settings.ts  tabs.ts  timezone.ts  vpn-sync.ts  webrtc.ts  worker-request-filter.ts
src/content/: index.ts  injected.ts
src/popup/: accuracy.ts  coord-paste.ts  debugger-mode.ts  early-protection.ts  favorites.ts  i18n.ts  index.ts  onboarding.ts  precision.ts  scope.ts  search.ts  settings.ts  ui.ts  vpn-sync.ts  website-links.ts
src/shared/: geo-tz-data.json  worker-payload.ts
src/types/: chrome-debugger.d.ts  temporal.d.ts  vite-env.d.ts
tests/: setup.ts  test-globals.d.ts
tests/fixtures/: coordinate-vectors.json  pattern-vectors.json
tests/helpers/: content.test.helper.ts  import-background.ts  mock-types.ts
(+431 files in other folders)
