[workspace]
resolver = "3"
members = ["core", "ffi", "agent"]

[workspace.package]
version = "0.1.5"
edition = "2024"
# Source-available under FSL-1.1-MIT (not an SPDX id, so reference the file).
license-file = "LICENSE"
authors = ["GeoSpoof"]
repository = "https://github.com/anthonysgro/geospoof"

[workspace.dependencies]
# Pinned EXACT (design §10a.3: pin exacts, keep swappable). MIT.
# Feature set targets what the core needs: usbmux (tcp), the CoreDeviceProxy userspace
# tunnel, RSD, DVT location (set/clear), the legacy location fallback, and DDI mounting.
idevice = { version = "=0.1.64", features = [
    "tcp",
    "usbmuxd",
    "core_device_proxy",
    "rsd",
    "dvt",
    "location_simulation",
    "tunnel_tcp_stack",
    "mobile_image_mounter",
    # AMFI (com.apple.amfi.lockdown): lets us read the real Developer Mode status off the
    # device instead of guessing, so the setup doctor never shows a green it can't back up.
    "amfi",
    "tss",
    # Cross-device control: read the iOS app's desired.json from its Documents over the
    # same usbmux/Wi-Fi link (house_arrest vends the container; afc reads it). §10i.
    "afc",
    "house_arrest",
    # North-star spike (§10j): RemoteXPC/RemotePairing TLS-PSK tunnel for off-usbmux /
    # overlay control (the modern iOS 17+ wireless path). Pure-Rust crypto, no OpenSSL.
    "remote_pairing",
] }
