[package]
name = "geospoof-gps-core"
description = "Host-agnostic core for GeoSpoof GPS: iOS device control over idevice."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# App-internal crate; never published to crates.io.
publish = false

[features]
# Exposes MockDeviceController to other crates (ffi/agent tests). Off in release.
mock = []

[dependencies]
idevice.workspace = true
# Exact pins (DEPENDENCY_POLICY.md). async-trait: object-safe + Send async trait
# methods; thiserror: ergonomic error enum; tokio: hold-loop (timers, tasks, sync).
async-trait = "=0.1.89"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["rt", "time", "sync", "macros"] }

[dev-dependencies]
# test-util enables paused-time control for deterministic hold-loop tests.
tokio = { version = "=1.52.3", features = ["rt", "time", "macros", "test-util"] }
