[package]
name = "geospoof-gps-ffi"
description = "C ABI over geospoof-gps-core for embedding in native hosts."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
# App-internal crate; never published to crates.io.
publish = false

[lib]
# staticlib/cdylib for native-app embedding; rlib ("lib") so Rust integration tests
# (tests/abi.rs) can link the crate (design §10a.1).
crate-type = ["staticlib", "cdylib", "lib"]

[features]
# Exposes the mock-backed constructors (gg_init_mock*) for hardware-free ABI tests.
mock = ["geospoof-gps-core/mock"]

[dependencies]
geospoof-gps-core = { path = "../core" }
# Owns the single runtime behind the ABI (FFI_CONTRACT.md). Exact pin per policy.
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "time", "sync"] }

[build-dependencies]
# Build-only: generates geospoof_gps.h from the Rust ABI. MPL-2.0, not shipped.
cbindgen = "=0.29.4"
